--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Homepage</h1>
-    <a href="/pages/about.html">About</a>
-    <img src="images/dog.jpg" alt="">
+    <a href="pages/about.html">About</a>
+    <a href="pages/contact.html">Contact</a>
+    <img src="images/dog.jpg" alt="doggo">
 </body>
 </html>
