--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,9 +7,14 @@
     <title>Odin Images and Links</title>
 </head>
 <body>
-    <H1>About Page</H1>
+
+    <h1>Contact Me</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <h1>Who are you</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
     <a href="/index.html">Home</a>
-    <a href="contact.html">Contact</a>
-    <img src="/images/swan.jpg" alt="Petty the swan">
+    <a href="about.html">About</a>
+    
 </body>
 </html>
